k8s/apps/vaultwarden/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - "vaultwarden.k8s.nyumbani.home"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
    - matches:
        - path:
            type: Exact
            value: /notifications/hub
      backendRefs:
        - name: vaultwarden
          port: 3012
