k8s/apps/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
spec:
  rules:
    - host: vaultwarden.k8s.nyumbani.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
          - path: /notifications/hub
            pathType: Exact
            backend:
              service:
                name: vaultwarden
                port:
                  name: websocket
